--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -3,3 +3,11 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 50px;
 }
+@media only screen and (max-width: 400px){
+    .carts{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 50px;
+        
+    }
+}
