--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -1,13 +1,26 @@
 .carts{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
+    gap: 20px;
+}
+.review-box{
+    width: 500px;
+    position: relative;
+   
+    
 }
 @media only screen and (max-width: 400px){
+    
     .carts{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        gap: 50px;
+        
+        
+    }
+    .review-box{
+        width: 100%;
+        position: relative;
+       
         
     }
 }
