--- a/src/Components/cart/Cart.css
+++ b/src/Components/cart/Cart.css
@@ -5,8 +5,24 @@
     border-radius: 10px;
     padding: 20px;
 }
+.review-cart{
+    margin-left: 15px;
+    position: relative;
+    left: 30px;
+    margin-bottom: 15px;
+    
+}
 .review-cart img{
     height: 60px;
     width: 60px;
     border-radius: 50%;
+}
+@media only screen and (max-width: 400px){
+    .review-cart{
+        margin-bottom: 15px;
+        margin-left: -20px;
+        position: relative;
+        left: 0px;
+        
+    }
 }
